<resources>
    <string name="app_name">NanoPost</string>
    <string name="exit">Exit</string>
    <string name="subscribe">subscribe</string>
    <string name="images">Images</string>
    <string name="Profile">Profile</string>
    <string name="Back">Back</string>
    <string name="more">More</string>
    <string name="Post">Post</string>
    <string name="Nanopost">NanoPost</string>
    <string name="password">password</string>
    <string name="username">username</string>
    <string name="new_post">New post…</string>
    <string name="add_image">Add image…</string>
    <string name="search">Search</string>
    <string name="accept">Accept</string>
    <string name="feed">Feed</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="bio">About you</string>
    <string name="delete">Delete</string>
</resources>