<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".presentation.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="16dp">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/imageViewRounded"
            android:layout_width="@dimen/profile_image_size"
            android:layout_height="@dimen/profile_image_size"
            android:layout_margin="16dp"
            android:src="@drawable/ic_add_photo"
            android:background="@color/md_theme_dark_primary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearance="@style/RoundedImage" />


        <EditText
            android:id="@+id/editTextUsername"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:hint="@string/username"
            android:textAppearance="@style/TextAppearance.Material3.TitleSmall"
            app:layout_constraintBottom_toTopOf="@+id/editTextBio"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageViewRounded"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTextBio"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:hint="@string/bio"
            android:textAppearance="@style/TextAppearance.Material3.BodySmall"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageViewRounded"
            app:layout_constraintTop_toBottomOf="@+id/editTextUsername" />

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/dividerTop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            app:dividerColor="@color/md_theme_dark_surfaceVariant"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageViewRounded" />
        <Button
            android:id="@+id/buttonCancel"
            android:layout_width="0dp"
            android:layout_height="@dimen/image_size"
            android:layout_margin="16dp"
            android:text="@string/cancel"
            android:textAppearance="@style/TextAppearance.Material3.LabelLarge"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/buttonSave"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/dividerTop" />

        <Button
            android:id="@+id/buttonSave"
            android:layout_width="0dp"
            android:layout_height="@dimen/image_size"
            android:layout_margin="16dp"
            android:text="@string/save"
            android:textAppearance="@style/TextAppearance.Material3.LabelLarge"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/buttonCancel"
            app:layout_constraintTop_toTopOf="@+id/dividerTop" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>